* The branch menu is now organized in branches/remotes/tags
* The view switch button now uses icons rather than words
* The view shortcuts have changed to use command 1/2 for the history/commit 
  view. The history's subviews can now be changed using command-option-1/2/3
* Listing commits has become much faster
* GitX no longer spawns zombie processes

* GitX now uses libgit2 to store object id's, reducing it's memory footprint

In addition many bugs were fixed, including the correct calculation of a
gravatar MD5 hash.


v0.5
====

This feature release has several new smaller or larger features:
* The current branch is now highlighted
* In the commit view, there is an option to amend commits
* The "Gist it" button now respects github.user/token
* Display a gravatar of the committer
* The commit message view now displays a vertical line at 50 characters
* It is now possible to revert changes by using the context menu in the
  commit view
* You can now stage only parts of a file by using the "Stage Hunk" buttons
  in the commit view
* You can now use GitX to show a diff of anything, for example by using
  'gitx --diff HEAD^^' or 'git diff HEAD~3 | gitx --diff'
* You can now drag and drop refs to move them and also create branches

In addition, the following bugs have been fixed:
* Better detection of git version
* Branch lines are no longer interspersed with half a pixel of whitespace
* The toolbar keeps its state when switching views

v0.4.1
==

This is a maintenance release. Most important fixes:

* The diff display is now much faster
* More locations are now searched for a default git
* Code pasted online is now private

v0.4: Changes since v0.3.1
===
* A new commitview, allowing you to selectively add changes and commit them.
* You can now upload a commit as a patch to gist.github.com
* GitX now searches for your git binary in more directories and is smarter
  about reporting errors regarding git paths.