@@ -4,10 +4,55 @@
     <title>GitX</title>
     <link>http://github.com/pieter/gitx/wikis</link>
     <description>A more native clone of Gitk for OS X</description>
+
+
+    <item>
+      <title>GitX 0.6</title>
+      <pubDate>Mon, 26 Jan 2009 21:23:01 GMT</pubDate>
+      <enclosure url="http://frim.frim.nl/GitXStable.app.zip" length="1531595" type="application/octet-stream" sparkle:version="0.6"/>
+      <description>
+        <![CDATA[
+          <h1 id="v06">GitX 0.6</h1>
+          <div style='font-size: 70%'>
+          <p>This release has the following new features and enhancements:</p>
+
+          <ul>
+          <li>The diff display now looks much nicer, using boxes to segment files</li>
+          <li>The toolbar can now me customized</li>
+          <li>Images that have been changed or added in a commit can now be viewed
+          inline in GitX</li>
+          <li>GitX has gained a preference pane which allows you to specify a git path
+          and disable the Gist and Gravatar integration</li>
+          <li>The commit interface is now more intuitive. Particularly, you can now
+          select multiple files and use drag and drop to stage / unstage files</li>
+          <li>You can now drag and drop files out of the commit view</li>
+          <li>The files in the commit view have gained a context menu that allows you
+          to revert changes / open the file / ignore the file</li>
+          <li>It is now possible to adjust the amount of context lines in the commit view.
+          Using a smaller context size allows you to do more fine-grained commits</li>
+          <li>The branch menu is now organized in branches/remotes/tags</li>
+          <li>The view switch button now uses icons rather than words</li>
+          <li>The view shortcuts have changed to use command 1/2 for the history/commit 
+          view. The history&#8217;s subviews can now be changed using command-option-1/2/3</li>
+          <li>Listing commits has become much faster</li>
+          <li>GitX no longer spawns zombie processes</li>
+          <li>GitX now shows a list of files that have been changed in a commit</li>
+          <li>GitX now uses libgit2 to store object id&#8217;s, reducing it&#8217;s memory footprint</li>
+          </ul>
+
+          <p>In addition many bugs were fixed, including the correct calculation of a
+          gravatar MD5 hash.</p>
+        </div>
+        ]]>
+      </description>
+    </item>
+
+
     <item>
       <title>GitX 0.5</title>
       <pubDate>Sun, 17 Now 2008 11:24:54 +0100</pubDate>
-      <enclosure url="http://frim.frim.nl/GitXStable.app.zip" length="1531595" type="application/octet-stream" sparkle:version="0.5"/>      <description>
+      <enclosure url="http://frim.frim.nl/GitXStable.app.zip" length="1531595" type="application/octet-stream" sparkle:version="0.5"/>
+      <description>
         <![CDATA[
         <h1>GitX Version 0.5</h1>
         <div style='font-size: 70%'>
