@@ -23,6 +23,7 @@ This release has the following new features and enhancements:
   view. The history's subviews can now be changed using command-option-1/2/3
 * Listing commits has become much faster
 * GitX no longer spawns zombie processes
+* GitX now shows a list of files that have been changed in a commit
 
 * GitX now uses libgit2 to store object id's, reducing it's memory footprint
 
